Added OpenAI calls to MVP

--- a/research/Agentify_MVP_draft.ipynb
+++ b/research/Agentify_MVP_draft.ipynb
@@ -14,7 +14,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "6520cea96c18472e8d181b92a22e596b": {
+        "8c3dbc95782e4ded8d80339cad8688fa": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "TextareaModel",
           "model_module_version": "1.5.0",
@@ -31,14 +31,14 @@
             "description": "Skeleton:",
             "description_tooltip": null,
             "disabled": false,
-            "layout": "IPY_MODEL_37a07b37dc934f7aade8225bca6521fd",
+            "layout": "IPY_MODEL_e4601cac512243479320404e72e92929",
             "placeholder": "paste here your skeleton",
             "rows": null,
-            "style": "IPY_MODEL_a89b3bed4bc74b1bb01db86b021e6d73",
-            "value": "1. create resume\n2. find open position\n3. apply"
+            "style": "IPY_MODEL_062027b284c44466bd3ee0aa03d6b607",
+            "value": "Skeleton for 'Mock interview platforms with AI-driven feedback':\nI. Introduction  \n   A. Definition of mock interview platforms  \n   B. Importance of interview preparation  \n   C. Introduction of AI-driven feedback  \n\nII. Overview of Mock Interview Platforms  \n   A. Purpose and benefits  \n      1. Practice interview skills  \n      2. Build confidence  \n      3. Familiarize with common interview questions  \n   B. Types of mock interview platforms  \n      1. Video-based platforms  \n      2. Text-based platforms"
           }
         },
-        "37a07b37dc934f7aade8225bca6521fd": {
+        "e4601cac512243479320404e72e92929": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -90,7 +90,7 @@
             "width": "50%"
           }
         },
-        "a89b3bed4bc74b1bb01db86b021e6d73": {
+        "062027b284c44466bd3ee0aa03d6b607": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "DescriptionStyleModel",
           "model_module_version": "1.5.0",
@@ -105,7 +105,7 @@
             "description_width": ""
           }
         },
-        "8d89b5d581d648528fe1e8244b9d43c2": {
+        "bc22307cd14c4426b92ebe4e64bb6cff": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonModel",
           "model_module_version": "1.5.0",
@@ -122,12 +122,12 @@
             "description": "Submit",
             "disabled": false,
             "icon": "",
-            "layout": "IPY_MODEL_962adefa34fd42468c441da8e101180e",
-            "style": "IPY_MODEL_30e0b13b9e8e42e5a1a682d8e11bebdc",
+            "layout": "IPY_MODEL_0de50fa660da4276a87511a0c7f51719",
+            "style": "IPY_MODEL_40c9862926d841b3979623cfe8648c8b",
             "tooltip": ""
           }
         },
-        "962adefa34fd42468c441da8e101180e": {
+        "0de50fa660da4276a87511a0c7f51719": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -179,7 +179,7 @@
             "width": null
           }
         },
-        "30e0b13b9e8e42e5a1a682d8e11bebdc": {
+        "40c9862926d841b3979623cfe8648c8b": {
           "model_module": "@jupyter-widgets/controls",
           "model_name": "ButtonStyleModel",
           "model_module_version": "1.5.0",
@@ -202,6 +202,98 @@
     {
       "cell_type": "markdown",
       "source": [
+        "# Step 0: Set up\n",
+        "\n",
+        "Add the OpenAI API key.\n",
+        "Go to the \"key\" tab and paste the `OPEN_AI_API_Agentify` variable."
+      ],
+      "metadata": {
+        "id": "xd1huN4adZhK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install openai"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "zgtjrHw_dyEK",
+        "outputId": "501f8969-813b-46d2-c4a2-4ace3525e5eb"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Requirement already satisfied: openai in /usr/local/lib/python3.10/dist-packages (1.54.3)\n",
+            "Requirement already satisfied: anyio<5,>=3.5.0 in /usr/local/lib/python3.10/dist-packages (from openai) (3.7.1)\n",
+            "Requirement already satisfied: distro<2,>=1.7.0 in /usr/local/lib/python3.10/dist-packages (from openai) (1.9.0)\n",
+            "Requirement already satisfied: httpx<1,>=0.23.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.27.2)\n",
+            "Requirement already satisfied: jiter<1,>=0.4.0 in /usr/local/lib/python3.10/dist-packages (from openai) (0.7.0)\n",
+            "Requirement already satisfied: pydantic<3,>=1.9.0 in /usr/local/lib/python3.10/dist-packages (from openai) (2.9.2)\n",
+            "Requirement already satisfied: sniffio in /usr/local/lib/python3.10/dist-packages (from openai) (1.3.1)\n",
+            "Requirement already satisfied: tqdm>4 in /usr/local/lib/python3.10/dist-packages (from openai) (4.66.6)\n",
+            "Requirement already satisfied: typing-extensions<5,>=4.11 in /usr/local/lib/python3.10/dist-packages (from openai) (4.12.2)\n",
+            "Requirement already satisfied: idna>=2.8 in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (3.10)\n",
+            "Requirement already satisfied: exceptiongroup in /usr/local/lib/python3.10/dist-packages (from anyio<5,>=3.5.0->openai) (1.2.2)\n",
+            "Requirement already satisfied: certifi in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (2024.8.30)\n",
+            "Requirement already satisfied: httpcore==1.* in /usr/local/lib/python3.10/dist-packages (from httpx<1,>=0.23.0->openai) (1.0.6)\n",
+            "Requirement already satisfied: h11<0.15,>=0.13 in /usr/local/lib/python3.10/dist-packages (from httpcore==1.*->httpx<1,>=0.23.0->openai) (0.14.0)\n",
+            "Requirement already satisfied: annotated-types>=0.6.0 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (0.7.0)\n",
+            "Requirement already satisfied: pydantic-core==2.23.4 in /usr/local/lib/python3.10/dist-packages (from pydantic<3,>=1.9.0->openai) (2.23.4)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import userdata\n",
+        "from openai import OpenAI\n",
+        "\n",
+        "OPEN_AI_API_Agentify = userdata.get('OPEN_AI_API_Agentify')\n",
+        "client = OpenAI(api_key=OPEN_AI_API_Agentify)"
+      ],
+      "metadata": {
+        "id": "9YUJ3QyEeiV4"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_response_OpenAI(prompt: str, model_name: str = \"gpt-4o-mini\", max_tokens: int = 20) -> str:\n",
+        "    response = client.chat.completions.create(\n",
+        "        model=model_name,\n",
+        "        messages=[\n",
+        "            { \"role\": \"system\", \"content\": \"You are a helpful assistant.\" },\n",
+        "            {\n",
+        "                \"role\": \"user\",\n",
+        "                \"content\": prompt,\n",
+        "            }\n",
+        "        ],\n",
+        "        n=1,\n",
+        "        temperature=0.0,\n",
+        "        max_tokens=max_tokens,  # to make responces shorter\n",
+        "        seed=42,\n",
+        "    )\n",
+        "    content = response.choices[0].message.content\n",
+        "    return content"
+      ],
+      "metadata": {
+        "id": "pChKcTh9riIW"
+      },
+      "execution_count": 46,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Step 1: Set topics"
       ],
       "metadata": {
@@ -214,10 +306,9 @@
         "proposed_topics = \"FAANG interviews, LLM agents\" # @param {type:\"string\", placeholder:\"Enter topics separated by commas\"}"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "fBG85zo4Fujo"
       },
-      "execution_count": 30,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -226,9 +317,9 @@
         "topics = [item.strip() for item in proposed_topics.split(\",\")]"
       ],
       "metadata": {
-        "id": "NnisUD-pGc2c"
+        "id": "tFKrwgUsvVKE"
       },
-      "execution_count": 31,
+      "execution_count": 21,
       "outputs": []
     },
     {
@@ -246,14 +337,14 @@
         "from typing import List\n",
         "\n",
         "def get_ideas_on_topic(topic: str) -> List[str]:\n",
-        "    # TODO: call LLM to get ideas\n",
-        "    ideas = [\"\"]\n",
+        "    response = get_response_OpenAI(\"Generate 2 ideas on the given topic int the format \\\"Idea #1, Idea #2\\\". Output only ideas, separated by commas. TOPIC: \" + topic)\n",
+        "    ideas = [item.strip() for item in response.split(\",\")]\n",
         "    return ideas"
       ],
       "metadata": {
         "id": "WWwjIPlfHPIJ"
       },
-      "execution_count": 32,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -271,9 +362,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "oXgyGp-FCIPR",
-        "outputId": "8a91744e-24de-48fd-c791-beab6a480205"
+        "outputId": "233b79ba-047e-4094-f020-fc844caec9ec"
       },
-      "execution_count": 33,
+      "execution_count": 30,
       "outputs": [
         {
           "output_type": "stream",
@@ -283,10 +374,11 @@
             "Suggested post ideas:\n",
             "\n",
             "FAANG interviews:\n",
-            " - \n",
+            " - Mock interview platforms with AI-driven feedback\n",
+            " - Comprehensive study guides with real interview questions and solutions.\n",
             "\n",
             "LLM agents:\n",
-            " - \n"
+            " - Idea #1: Develop a personalized LLM agent that learns from user interactions to provide tailored recommendations for\n"
           ]
         }
       ]
@@ -304,25 +396,27 @@
       "cell_type": "code",
       "source": [
         "def get_skeleton_for_idea(idea: str) -> str:\n",
-        "    # TODO: call LLM to get skeletons\n",
-        "    skeleton = \"skeleton for idea \" + idea\n",
+        "    skeleton = get_response_OpenAI(\n",
+        "        \"Generate a skeleton for the idea: \" + idea + \"\\n\\nNo extra formating, just plain text.\\nSkeleton – (or “post skeleton”) a basic outline that organizes the main points, sections, and flow of the content on a specific idea before it's fully written.\",\n",
+        "        max_tokens=100,\n",
+        "    )\n",
         "    return skeleton"
       ],
       "metadata": {
         "id": "L4VmfAN6JBJm"
       },
-      "execution_count": 36,
+      "execution_count": 50,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "selected_idea = \"How to master your resume?\" # @param {type:\"string\", placeholder:\"paste here your idea\"}"
+        "selected_idea = \"Mock interview platforms with AI-driven feedback\" # @param {type:\"string\", placeholder:\"paste here your idea\"}"
       ],
       "metadata": {
         "id": "bFCh9OhTI2i1"
       },
-      "execution_count": 37,
+      "execution_count": 51,
       "outputs": []
     },
     {
@@ -337,17 +431,30 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "F86LMwXMJ2Ht",
-        "outputId": "81749acf-1a90-4109-cdb9-25674ec551ac"
+        "outputId": "cf75442b-ae83-4792-9f89-89c033d830e5"
       },
-      "execution_count": 38,
+      "execution_count": 54,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Skeleton for 'How to master your resume?':\n",
-            "skeleton for idea How to master your resume?\n"
+            "Skeleton for 'Mock interview platforms with AI-driven feedback':\n",
+            "I. Introduction  \n",
+            "   A. Definition of mock interview platforms  \n",
+            "   B. Importance of interview preparation  \n",
+            "   C. Introduction to AI-driven feedback  \n",
+            "\n",
+            "II. Overview of Mock Interview Platforms  \n",
+            "   A. Purpose and benefits  \n",
+            "      1. Practice interview skills  \n",
+            "      2. Build confidence  \n",
+            "      3. Familiarize with common interview questions  \n",
+            "   B. Types of mock interview platforms  \n",
+            "      1. Video-based platforms  \n",
+            "      2. Text-based platforms  \n",
+            "      3.\n"
           ]
         }
       ]
@@ -365,14 +472,16 @@
       "cell_type": "code",
       "source": [
         "def get_content_for_skeleton(skeleton: str) -> str:\n",
-        "    # TODO: call LLM to get skeletons\n",
-        "    content = \"content for skeleton \" + skeleton\n",
+        "    content = get_response_OpenAI(\n",
+        "        \"Generate a post content for LinkedIn based on the skeleton: \" + skeleton,\n",
+        "        max_tokens=500,\n",
+        "    )\n",
         "    return content"
       ],
       "metadata": {
         "id": "pDaTyow3KO9U"
       },
-      "execution_count": 39,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -412,20 +521,20 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 240,
+          "height": 676,
           "referenced_widgets": [
-            "6520cea96c18472e8d181b92a22e596b",
-            "37a07b37dc934f7aade8225bca6521fd",
-            "a89b3bed4bc74b1bb01db86b021e6d73",
-            "8d89b5d581d648528fe1e8244b9d43c2",
-            "962adefa34fd42468c441da8e101180e",
-            "30e0b13b9e8e42e5a1a682d8e11bebdc"
+            "8c3dbc95782e4ded8d80339cad8688fa",
+            "e4601cac512243479320404e72e92929",
+            "062027b284c44466bd3ee0aa03d6b607",
+            "bc22307cd14c4426b92ebe4e64bb6cff",
+            "0de50fa660da4276a87511a0c7f51719",
+            "40c9862926d841b3979623cfe8648c8b"
           ]
         },
         "id": "PdM63m90K-_f",
-        "outputId": "5631558d-0b07-416a-974c-1b2960c68d93"
+        "outputId": "a159736d-b934-4e36-c5d5-4ba2ee40647c"
       },
-      "execution_count": 50,
+      "execution_count": 56,
       "outputs": [
         {
           "output_type": "display_data",
@@ -436,7 +545,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "6520cea96c18472e8d181b92a22e596b"
+              "model_id": "8c3dbc95782e4ded8d80339cad8688fa"
             }
           },
           "metadata": {}
@@ -450,7 +559,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "8d89b5d581d648528fe1e8244b9d43c2"
+              "model_id": "bc22307cd14c4426b92ebe4e64bb6cff"
             }
           },
           "metadata": {}
@@ -461,9 +570,33 @@
           "text": [
             "\n",
             "Content for selected skeleton:\n",
-            "content for skeleton 1. create resume\n",
-            "2. find open position\n",
-            "3. apply\n"
+            "**Unlocking Your Interview Potential: The Power of Mock Interview Platforms with AI-Driven Feedback**\n",
+            "\n",
+            "In today's competitive job market, the interview process can be daunting. Mock interview platforms have emerged as essential tools for job seekers, providing a safe space to practice and refine their interview skills. These platforms simulate real interview scenarios, allowing candidates to prepare effectively and boost their confidence before facing potential employers.\n",
+            "\n",
+            "**Why is Interview Preparation Crucial?**  \n",
+            "Interviews are often the deciding factor in landing a job. They not only assess your qualifications but also evaluate your communication skills, problem-solving abilities, and cultural fit within a company. Proper preparation can make all the difference, transforming anxiety into assurance.\n",
+            "\n",
+            "**Enter AI-Driven Feedback**  \n",
+            "The latest advancement in mock interview platforms is the integration of AI-driven feedback. This innovative technology analyzes your performance in real-time, offering personalized insights and constructive criticism. With AI, candidates can receive tailored advice on body language, tone, and even the content of their responses, making preparation more effective than ever.\n",
+            "\n",
+            "**Overview of Mock Interview Platforms**  \n",
+            "Mock interview platforms serve a dual purpose: they provide a space for practice and a means to gain valuable feedback. Here are some key benefits:\n",
+            "\n",
+            "1. **Practice Interview Skills**: Regular practice helps candidates articulate their thoughts clearly and confidently.\n",
+            "2. **Build Confidence**: Familiarity with the interview process reduces anxiety and builds self-assurance.\n",
+            "3. **Familiarize with Common Interview Questions**: Candidates can prepare for frequently asked questions, ensuring they are ready to impress.\n",
+            "\n",
+            "**Types of Mock Interview Platforms**  \n",
+            "Mock interview platforms come in various formats to suit different learning styles:\n",
+            "\n",
+            "1. **Video-Based Platforms**: These platforms simulate face-to-face interviews, allowing candidates to practice their verbal and non-verbal communication skills. They often include features like recording and playback, enabling users to review their performance.\n",
+            "   \n",
+            "2. **Text-Based Platforms**: Ideal for those who prefer written communication, these platforms focus on answering questions in a text format. They can be particularly useful for roles that require strong writing skills or for candidates who may be more comfortable expressing themselves in writing.\n",
+            "\n",
+            "In conclusion, mock interview platforms with AI-driven feedback are revolutionizing the way candidates prepare for interviews. By leveraging technology, job seekers can enhance their skills, build confidence, and ultimately increase their chances of success in the job market. Embrace the future of interview preparation and take your career to the next level! \n",
+            "\n",
+            "#JobInterview #CareerDevelopment #MockInterviews\n"
           ]
         }
       ]
